--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <div class="container">
     <div class="item"> <a href="Omae Wa Mou.mp3">Omae Wa Mou</a></div>
-    <div class="item"> <a href="Omae Wa Mou.mp3">Ganbare Ganbare</a></div>
+    <div class="item"> <a href="ganbare.mp3">Ganbare Ganbare</a></div>
     <div class="item"> <a href="imperial.mp3">battotai extended</a></div>
     <div class="item"> <a href="Fukashigi no Carte Type Beat (Prod. Heaven).mp3">Fukashigi no Carte</a></div>
     <div class="item"> <a href="ui.mp3">セックス大好き</a></div>
